# ObstacleSATGenerator

./: 4cycle.g.txt  5wheel2hub.g.txt  CMakeLists.txt  Clause.cpp  Clause.hpp  G13.g.txt  G13.txt  G36.g.txt  G36.txt  G37.g.txt  G37.txt  G5.g.txt  Graph.cpp  Graph.hpp  RangeUtilities.hpp  SATInstance.cpp  SATInstance.hpp  SATInstanceGenerator.cpp  SATInstanceGenerator.hpp  SolutionAnalyzer.cpp  SolutionAnalyzer.hpp  Variable.cpp  Variable.hpp  dodecahedron.txt  icosahedron.txt  main.cpp  triangularPrism.g.txt
ObstacleSATGenerator/: Clause.cpp  Clause.hpp  Graph.cpp  Graph.h  Graph.hpp  RangeUtilities.hpp  SATInstance.cpp  SATInstance.hpp  SATInstanceGenerator.cpp  SATInstanceGenerator.hpp  SolutionAnalyzer.cpp  SolutionAnalyzer.hpp  Variable.cpp  Variable.hpp  main.cpp
ObstacleSATGenerator.xcodeproj/: project.pbxproj
ObstacleSATGenerator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ObstacleSATGenerator.xcodeproj/xcuserdata/hartman.xcuserdatad/xcschemes/: ObstacleSATGenerator Release.xcscheme  ObstacleSATGenerator.xcscheme  xcschememanagement.plist
